--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -222,7 +222,7 @@ Additionally, we refer to the set of basis vectors which are assigned non-zero w
 Table~\ref{table:core_features} provides an overview of the features employed
 for a pair $(q, h)$. Additionally, it is also considered as a feature whether a
 particular candidate hypernym $h$ belongs to the top-50 most frequent hypernyms
-for the category of $q$ (concept or entity). 
+for the category of $q$ (concept or entity).
 % legkésőbb itt belengetni a categoryánkénti bonáts jelentőségét
 Three additional features are defined for incorporating the concept tree output
 by FCA, whether the most specific location within the DAG for $q$
@@ -254,7 +254,7 @@ For a given query $q$, belonging to either of the \textit{Concept} or
 \textit{Entity} category, we sampled $h'$ from those hypernyms which were
 included as a valid hypernym in the training data with respect to some $q' \neq
 q$ query phrase. The default number of negative samples generated for each
-positive training sample is 50. 
+positive training sample is 50.
 % Ha beleírjuk az 5000-es dolgot is, akkor itt lehet utalni rá, hogy lásd
 % post-eval eredmények.
 
@@ -289,6 +289,7 @@ positive training sample is 50.
 	\centering
       \resizebox{.5\textwidth}{!}{%
 	\begin{tabular}{c|lllll}
+    \toprule
     &  MAP  &  MRR  &  P@1  &  P@3 & P@5 \\
        \toprule
        % MFH: ..@15
@@ -306,7 +307,7 @@ positive training sample is 50.
     \midrule
     2B  & 40.2\% & 58.8\% & 50.6\% & 44.6\% & 40.3\% \\
     2B  & 33.32\% & 51.48\% & 36.2\% & 40.07\% & 35.76\% \\ % & 28.44 \\
-    \bottomrule 
+    \bottomrule
   \end{tabular}
   }
   \label{table:MFH}
@@ -320,20 +321,29 @@ positive training sample is 50.
 Table~\ref{table:coverage} shows the coverage of our vocabulary with respect to
 the query words on the training and test datasets of the various subtasks.
 
-\begin{table}
+\begin{table*}
 	\centering
-	\begin{tabular}{r|cc|cc}
-		& \multicolumn{2}{c|}{Concept} & \multicolumn{2}{c}{Entity} \\
-		& Train & Test   & Train & Test \\ \hline
-	1A  & 975/4 & 1055/4 & 379/142 & 344/99 \\
-	1B  & 709/1 & 767/2  & 249/41  & 205/26 \\
-	1C  & 776/2 & 625/2  & 184/38  & 328/45 \\
-	2A  & 442/58& 433/67 & 0/0     & 0/0    \\
-	2B  & 366/21& 341/17 & 79/34   & 102/40 \\
+      %\resizebox{\textwidth}{!}{%
+	\begin{tabular}{r|cccc|cccc}
+    \toprule
+		& \multicolumn{4}{c|}{Concept} & \multicolumn{4}{c}{Entity} \\
+    & \multicolumn{2}{c}{Train} &
+     \multicolumn{2}{c|}{Test} &
+     \multicolumn{2}{c}{Train} &
+     \multicolumn{2}{c}{Test} \\
+     \midrule
+1A & 975(4) & 0.41\%	&1055(4) & 0.38\%	&379(142) & 37.47\%	&344(99) & 28.78\% \\
+1B & 709(1) & 0.14\%	&767(2) & 0.26\%	&249(41) & 16.47\%	&205(26) & 12.68\% \\
+1C & 776(2) & 0.26\%	&625(2) & 0.32\%	&184(38) & 20.65\%	&328(45) & 13.72\% \\
+2A & 442(58) & 13.12\%	&433(67) & 15.47\%	&0(0) & 	& 0(0) & \\
+2B & 366(21) & 5.74\%	&341(17) & 4.99\%	&79(34) & 43.04\%	&102(40) & 39.22\% \\
+\bottomrule
 	\end{tabular}
-\caption{Number of in-vocabulary/out-of-vocabulary queries per query types.}
+  %}
+  \caption{Number of in-vocabulary(out-of-vocabulary) queries per query types.
+  The ratio of the latter is also shown.}
 \label{table:coverage}
-\end{table}
+\end{table*}
 
 
 \begin{table}
