--- a/paper/sparsians.tex
+++ b/paper/sparsians.tex
@@ -18,6 +18,8 @@
 \usepackage{url}
 \usepackage{booktabs}
 \usepackage{graphicx}
+\usepackage{subfig}
+\usepackage{verbatim}
 
 \aclfinalcopy % Uncomment this line for all SemEval submissions
 
@@ -317,6 +319,8 @@ positive training sample is 50.
   organizers that is based on the most frequent hypernyms in general for
   comparison.}
 \end{table}
+
+\input{big_table}
 
 Table~\ref{table:coverage} shows the coverage of our vocabulary with respect to
 the query words on the training and test datasets of the various subtasks.
