--- a/paper/big_table.tex
+++ b/paper/big_table.tex
@@ -1,79 +1,34 @@
 \begin{figure*}
 \resizebox{\textwidth}{!}{
-	\subfloat{
-\begin{tabular}{ll|rrrrrr}
-	& & \multicolumn{6}{c}{candidate filtration off} \\
+\begin{tabular}{ll|rrrrrr|rrrrrr}
+	& & \multicolumn{6}{c|}{candidate filtration off} & 	
+	\multicolumn{6}{c}{candidate filtration on}\\
 	\toprule
-	k & ns &     MAP &    MRR &    P@1 &     P@3 &    P@5 &    P@15 \\
+	k & ns &     MAP &    MRR &    P@1 &     P@3 &    P@5 &    P@15 & 	MAP 
+	&    MRR &    P@1 &    P@3 &   P@5 &   P@15 \\
 	\midrule
-	200\phantom{0} & 50 &  0.065 &  0.149 &  0.131 &  0.074 &  0.061 &  0.055 \\
-	200 & all &  0.069 &  0.158 &  0.141 &  0.076 &  0.063 &  0.058 \\
-	\bottomrule
-\end{tabular}		
-	}
-	\hfill
-	\subfloat{
-\begin{tabular}{rrrrrr}
-	\multicolumn{6}{c}{candidate filtration on}	\\
-	\toprule
-	MAP &    MRR &    P@1 &    P@3 &   P@5 &   P@15 \\
+	200 & 50 &  0.065 &  0.149 &  0.131 &  0.074 &  0.061 &  0.055 & 0.121 &  
+	0.254 &  0.189 &  0.129 &  0.116 &  0.109\\
+	200 & all &  0.069 &  0.158 &  0.141 &  0.076 &  0.063 &  0.058 & 0.130 &  
+	0.271 &  0.199 &  0.142 &  0.125 &  0.118\\ \midrule
+	300 & 50 &  0.069 &  0.158 &  0.139 &  0.076 &  0.064 &  0.059 & 0.121 &  
+	0.257 &  0.195 &  0.130 &  0.115 &  0.110 \\
+	300 & all &  0.080 &  0.178 &  0.154 &  0.089 &  0.074 &  0.068 & 0.135 &  
+	0.280 &  0.211 &  0.145 &  0.129 &  0.123 \\
 	\midrule
-	0.121 &  0.254 &  0.189 &  0.129 &  0.116 &  0.109  \\
-	0.130 &  0.271 &  0.199 &  0.142 &  0.125 &  0.118 \\
-	\bottomrule
-\end{tabular}
-	}
-}\\
-\resizebox{\textwidth}{!}{
-	\subfloat{
-\begin{tabular}{ll|rrrrrr}
-	\toprule
-	k & ns &     MAP &    MRR &    P@1 &     P@3 &  P@5 &    P@15 \\
-	\midrule
-	300\phantom{0} & 50 &  0.069 &  0.158 &  0.139 &  0.076 &  0.064 &  0.059 \\
-	300 & all &  0.080 &  0.178 &  0.154 &  0.089 &  0.074 &  0.068 \\
+	1000 & 50 &  0.090 &  0.200 &  0.172 &  0.098 &  0.083 &  0.077 & 	0.133 
+	&  \textbf{0.281} &  \textbf{0.213} &  0.138 &  0.126 &  0.123 \\
+	1000 & all &  0.116 &  0.261 &  0.225 &  0.125 &  0.108 &  0.100 & 	
+	\textbf{0.136} 
+	&  0.272 &  0.194 &  \textbf{0.139} &  \textbf{0.132} &  \textbf{0.128} \\
 	\bottomrule
 \end{tabular}
-	}
-	\hfill
-	\subfloat{
-\begin{tabular}{rrrrrr}
-	\toprule
-	MAP &    MRR &    P@1 &    P@3 &   P@5 &   P@15 \\
-	\midrule
-	0.121 &  0.257 &  0.195 &  0.130 &  0.115 &  0.110 \\
-	0.135 &  0.280 &  0.211 &  0.145 &  0.129 &  0.123 \\
-	\bottomrule
-\end{tabular}
-	}
-}\\
-\resizebox{\textwidth}{!}{
-	\subfloat{
-\begin{tabular}{ll|rrrrrr}
-	\toprule
-	k & ns &     MAP &    MRR &    P@1 &     P@3 &  P@5  &    P@15 \\
-	\midrule
-	1000 & 50 &  0.090 &  0.200 &  0.172 &  0.098 &  0.083 &  0.077 \\
-	1000& all &  0.116 &  0.261 &  0.225 &  0.125 &  0.108 &  0.100 \\
-	\bottomrule
-\end{tabular}
-	}
-	\hfill
-	\subfloat{
-\begin{tabular}{rrrrrr}
-	\toprule
-	 MAP &    MRR &   P@1 &    P@3 &   P@5 &   P@15 \\
-	\midrule
-	0.133 &  0.281 &  0.213 &  0.138 &  0.126 &  0.123  \\
-	0.136 &  0.272 &  0.194 &  0.139 &  0.132 &  0.128 \\
-	\bottomrule
-\end{tabular}
-	}
 }
 \caption{Post evaluation results on the 1A dataset investigating the effect of 
 various hyperparameter choices. $k$ and $ns$ denotes the number of basis 
 vectors and negative samples generated during training per each positive $(q, 
-h)$ pair.}
+h)$ pair. Best results obtained for each metric are marked as bold.}
+\label{table:1A_detailed}
 \end{figure*}
 
 \begin{comment}
