reformats table numbers and extends the our approach part

--- a/paper/big_table.tex
+++ b/paper/big_table.tex
@@ -1,4 +1,4 @@
-\begin{figure*}
+\begin{table*}
 \resizebox{\textwidth}{!}{
 \begin{tabular}{ll|rrrrrr|rrrrrr}
 	& & \multicolumn{6}{c|}{candidate filtration off} & 	
@@ -7,20 +7,20 @@
 	k & ns &     MAP &    MRR &    P@1 &     P@3 &    P@5 &    P@15 & 	MAP 
 	&    MRR &    P@1 &    P@3 &   P@5 &   P@15 \\
 	\midrule
-	200 & 50 &  0.065 &  0.149 &  0.131 &  0.074 &  0.061 &  0.055 & 0.121 &  
-	0.254 &  0.189 &  0.129 &  0.116 &  0.109\\
-	200 & all &  0.069 &  0.158 &  0.141 &  0.076 &  0.063 &  0.058 & 0.130 &  
-	0.271 &  0.199 &  0.142 &  0.125 &  0.118\\ \midrule
-	300 & 50 &  0.069 &  0.158 &  0.139 &  0.076 &  0.064 &  0.059 & 0.121 &  
-	0.257 &  0.195 &  0.130 &  0.115 &  0.110 \\
-	300 & all &  0.080 &  0.178 &  0.154 &  0.089 &  0.074 &  0.068 & 0.135 &  
-	0.280 &  0.211 &  0.145 &  0.129 &  0.123 \\
+	200 & 50 &  6.5 &  14.9 &  13.1 &  7.4 &  6.1 &  5.5 & 12.1 &  
+	25.4 &  18.9 &  12.9 &  11.6 &  10.9\\
+	200 & all &  6.9 &  15.8 &  14.1 &  7.6 &  6.3 &  5.8 & 13.0 &  
+	27.1 &  19.9 &  14.2 &  12.5 &  11.8\\ \midrule
+	300 & 50 & 6.9 &  15.8 &  13.9 &  7.6 &  6.4 &  5.9 & 12.1 &  
+	25.7 & 19.5 &  13.0 &  11.5 &  11.0 \\
+	300 & all &  8.0 &  17.8 &  15.4 &  8.9 &  7.4 &  6.8 & 13.5 &  
+	28.0 &  21.1 & 14.5 &  12.9 &  12.3 \\
 	\midrule
-	1000 & 50 &  0.090 &  0.200 &  0.172 &  0.098 &  0.083 &  0.077 & 	0.133 
-	&  \textbf{0.281} &  \textbf{0.213} &  0.138 &  0.126 &  0.123 \\
-	1000 & all &  0.116 &  0.261 &  0.225 &  0.125 &  0.108 &  0.100 & 	
-	\textbf{0.136} 
-	&  0.272 &  0.194 &  \textbf{0.139} &  \textbf{0.132} &  \textbf{0.128} \\
+	1000 & 50 &  9.0 &  20.0 &  17.2 &  9.8 &  8.3 &  7.7 & 13.3 
+	&  \textbf{28.1} &  \textbf{21.3} & 13.8 &  12.6 &  12.3 \\
+	1000 & all &  11.6 &  26.1 &  22.5 & 12.5 & 10.8 &  10.0 & 	
+	\textbf{13.6} 
+	& 27.2 &  19.4 &  \textbf{13.9} &  \textbf{13.2} &  \textbf{12.8} \\
 	\bottomrule
 \end{tabular}
 }
@@ -29,7 +29,7 @@ various hyperparameter choices. $k$ and $ns$ denotes the number of basis
 vectors and negative samples generated during training per each positive $(q, 
 h)$ pair. Best results obtained for each metric are marked as bold.}
 \label{table:1A_detailed}
-\end{figure*}
+\end{table*}
 
 \begin{comment}
 1B
@@ -285,3 +285,22 @@ h)$ pair. Best results obtained for each metric are marked as bold.}
 	
 } \\
 \end{comment}
+
+
+\begin{table}
+\resizebox{.5\textwidth}{!}{
+\begin{tabular}{l|rrrrrr}
+	\toprule
+	{} &    MAP &    MRR &    P@1 &    P@3 &   P@10 &   P@15  \\
+	\midrule
+	1A   &  13.3 &  28.1 &  21.3 &  13.8 &  12.6 &  12.3 \\
+	1B   &  12.5 &  24.2 &  14.5 &  13.4 &  12.5 &  12.0 \\
+	1C   &  21.8 &  43.8 &  33.7 &  22.9 &  21.4 &  19.9 \\
+	2A	 &  21.9 &  39.5 &  34.2 &  25.5 &  22.6 &  18.5 \\
+	2B   &  31.5 &  43.6 &  29.8 &  30.3 &  30.3 &  31.5 \\
+	\bottomrule
+\end{tabular}
+}
+\caption{Post evaluation results for the different subtask using $k=1000, 
+ns=50$ and hypernym candidate filtration.}
+\end{table}
